--- a/client/chrome/skin/mac3.1/personas.css
+++ b/client/chrome/skin/mac3.1/personas.css
@@ -146,7 +146,10 @@
   background-image: none !important;
 }
 
+
+/******************************************************************************/
 /* Make some elements a little transparent so the persona flavors their look. */
+
 #main-window[persona] #urlbar,
 #main-window[persona] #searchbar {
   opacity: 0.8;
@@ -180,6 +183,24 @@
 #main-window[persona] toolbarbutton.bookmark-item {
   -moz-appearance: none;
   background-color: transparent;
+}
+
+#main-window[persona] .findbar-find-next,
+#main-window[persona] .findbar-find-previous,
+#main-window[persona] .findbar-highlight {
+  background: url("chrome://personas/skin/white-gray-gradient.png") repeat-x top center;
+  color: inherit !important;
+}
+
+#main-window[persona] .findbar-container > toolbarbutton:not([disabled]):hover:active,
+#main-window[persona] .findbar-container > hbox > toolbarbutton:not([disabled]):hover:active {
+  background-image: url("chrome://personas/skin/white-gray-gradient-active.png");
+  color: inherit !important;
+}
+
+.findbar-container > toolbarbutton[disabled],
+.findbar-container > hbox > toolbarbutton[disabled] {
+  opacity: 0.5;
 }
 
 
